--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,57 @@ body {
     background-color: #121212;
     color: white;
     font-family: 'Courier New', Courier, monospace;
-    padding: 2rem;
+
 }
-.container {
-    max-width: 700px;
+html{
+    scroll-behavior: smooth;
+}
+.hero.is-fullheight{
+    background-image: url("");
+    background-size: cover;   /* revisar que hace */
+    background-position: center;
+    color: white;
+}
+
+.hero .title, .hero .subtitle {
+    text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
     margin: auto;
+  }
+.hero .subtitle {
+    margin-top: 50px;
 }
+.hero .button {
+    margin-top: 50px;
+    background-color: #00f7ff;
+    color: rgb(0, 0, 0);
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
+
 .boton-opcion {
     margin: 10px 0;
 }
 .oculto {
     display: none;
 }
+section1{
+    border: 1px solid black;
+}
+
+button {
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background: #ff0000;
+    cursor: help;
+    
+}
+
