--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
 
 }
+/* esta parte es para el scroll mas fluidito */
 html{
     scroll-behavior: smooth;
 }
@@ -31,6 +32,12 @@ html{
 }
 
 
+.card.has-equal-height {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .boton-opcion {
     margin: 10px 0;
 }
@@ -56,4 +63,26 @@ button:hover {
     cursor: help;
     
 }
+
+.nivel {
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 2rem;
+}
+
+.contenido-nivel {
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+
+.contenido-nivel.visible {
+    opacity: 1;
+}
+
 
